--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -7,3 +7,13 @@ jobs:
     runs-on: ubuntu-latest      # Sets the build environment a machine with the latest Ubuntu installed
     steps:
     - uses: actions/checkout@v2 # Adds a step to checkout the repository code
+    - run: dotnet build
+    - run: cd DotnetTemplate.Web
+    - run: npm install
+    - run: npm run build
+    - run: cd ..
+    - run: dotnet test
+    - run: cd DotnetTemplate.Web
+    - run: npm t
+    - run: npm run lint
+    - run: dotnet run
