Add docker images to Jenkinsfile

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -19,3 +19,8 @@ jobs:
     - run: |
         cd ./DotnetTemplate.Web
         npm run lint
+    #- name: Invoke deployment hook
+    #  uses: distributhor/workflow-webhook@v3
+    #  env:
+    #    webhook_url: ${{ secrets.WEBHOOK_URL }}
+    #    webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
